--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <p>Season Kick-off: Meet the Teams</p>
         <h3>September 1</h3>
             <p>First Game of the Season (Check Game Schedule for detials)</p>
+            <p>Trying to commit</p>
     </section>
 </body>
 </html>
