--- a/about.html
+++ b/about.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About MDHL</title>
     <link rel="icon" type="image/x-icon" href="./1Assignment/favicon.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Mighty Ducks Hockey League</h1>
-    <div>
-        <nav>
-            <a href="./index.html">Home | </a>
-            <a href="#">About MDHL | </a>
-            <a href="./contact.html">Contact </a>
-        </nav>
-    </div>
+    <header>
+        <h1>Mighty Ducks Hockey League</h1>
+        <div>
+            <nav>
+                <a href="./index.html">Home  </a>
+                <a href="#">About MDHL  </a>
+                <a href="./contact.html">Contact </a>
+            </nav>
+        </div>
+        <img class="banner" src="https://cdn.discordapp.com/attachments/1034562900372766843/1073239512366448751/design2_image1.jpg" alt="banner2">   
+        <h2 class="underbanner">About</h2>
+    </header> 
     <img src="https://cdn.discordapp.com/attachments/1034562900372766843/1072537805722505357/hockey_2.jpg" alt="hockey player" width="350">
-    <section>
+    <div>
+        <img class="logo" src="./1Assignment/Logo.png" alt="logo">
         <h3>Mision</h3>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in 
                 learning and playing soccer, with opportunities to learn and practice skills related to the game of 
@@ -34,6 +40,6 @@
                 neighborhood. MDHL ran by a small full-time staff, and relies on the generous volunteer time of 
                 parents and previous league members
             </p>
-    </section>
+    </div>
 </body>
 </html>
