--- a/about.html
+++ b/about.html
@@ -12,18 +12,24 @@
     <header>
         <h1>Mighty Ducks Hockey League</h1>
         <div>
+            <div class="logo"><a href="#"><img class="logo" src="./1Assignment/Logo.png" alt="logo"></a></div>
             <nav>
                 <a href="./index.html">Home  </a>
                 <a href="#">About MDHL  </a>
+                <a href="./game_info.html">Game Information</a>
+                <a href="./rules.html">Rules</a>
                 <a href="./contact.html">Contact </a>
             </nav>
         </div>
         <img class="banner" src="https://cdn.discordapp.com/attachments/1034562900372766843/1073239512366448751/design2_image1.jpg" alt="banner2">   
-        <h2 class="underbanner">About</h2>
+        
     </header> 
-    <img src="https://cdn.discordapp.com/attachments/1034562900372766843/1072537805722505357/hockey_2.jpg" alt="hockey player" width="350">
+    <div class="section">
+        <div class="text">
     <div>
-        <img class="logo" src="./1Assignment/Logo.png" alt="logo">
+        <img src="https://cdn.discordapp.com/attachments/1034562900372766843/1072537805722505357/hockey_2.jpg" alt="hockey player" width="350">
+    </div>
+    <h2 class="underbanner">About</h2>
         <h3>Mision</h3>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in 
                 learning and playing soccer, with opportunities to learn and practice skills related to the game of 
@@ -33,13 +39,15 @@
             <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
                 through the building of character, self-discipline, and leadership.
             </p>
-        <h2>General Information</h2>
+        <h3><strong>General Information</strong></h3>
             <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
                 Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a 
                 member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
                 neighborhood. MDHL ran by a small full-time staff, and relies on the generous volunteer time of 
                 parents and previous league members
+    
             </p>
+        </div>
     </div>
 </body>
 </html>
