--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
                 <a href="./game_info.html">Game Information</a>
                 <a href="./rules.html">Rules</a>
                 <a href="./contact.html">Contact </a>
+                <a href="./form.html">Registration Form </a>
             </nav>
         </div>
         <img class="banner" src="https://cdn.discordapp.com/attachments/1034562900372766843/1073239512366448751/design2_image1.jpg" alt="banner2">   
