--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
                 <a href="./game_info.html">Game Information</a>
                 <a href="./rules.html">Rules</a>
                 <a href="#">Contact </a>
+                <a href="./form.html">Registration Form </a>
             </nav>
             
         </div>
