--- a/game_info.html
+++ b/game_info.html
@@ -19,6 +19,7 @@
                 <a href="#">Game Information</a>
                 <a href="./rules.html">Rules</a>
                 <a href="./contact.html">Contact </a>
+                <a href="./form.html">Registration Form </a>
             </nav>
         </div>
         <img class="banner" src="https://cdn.discordapp.com/attachments/1034562900372766843/1073239426509049967/design1_image1.jpg" alt="banner">
@@ -89,7 +90,7 @@
       </tr>
     </table>
     </header>
-    
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d94446445.00105444!2d-151.1930056!3d43.74634920000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2fa7af533d4b%3A0x113086b05b1d5ba4!2sGreater%20Toronto%20Ball%20Hockey%20League!5e0!3m2!1ses-419!2sar!4v1676616311024!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
 </body>
 <footer>
     <div class="section">
